# homelab-k3s-mcp

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  go.mod  go.sum  main.go
.github/workflows/: ci.yml
deploy/: deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml
deploy/overlays/kind/: kustomization.yaml
docs/: doc-tracker.md  prd-aws-config-get.md  prd-dear-baby-reset-user.md  prd-github-app-installation-token.md  prd-grafana-token.md  prd-namespace-list.md  prd-opensearch-document-delete.md  prd-opensearch-document-put.md  prd-opensearch-search.md  prd-ping.md  prd-platform-auth-safety.md  prd-pod-describe.md  prd-workload-list.md  prd-workload-logs.md  prd-workload-restart.md  prd-workload-scale.md  test-aws-config-get.md  test-dear-baby-reset-user.md  test-github-app-installation-token.md  test-grafana-token.md  test-namespace-list.md  test-opensearch-document-delete.md  test-opensearch-document-put.md  test-opensearch-search.md  test-ping.md  test-platform-auth-safety.md  test-pod-describe.md  test-workload-list.md  test-workload-logs.md  test-workload-restart.md  test-workload-scale.md  values.md
internal/auth/: auth.go  auth_test.go
internal/awsconfig/: awsconfig.go  awsconfig_test.go
internal/github/: github.go  github_test.go
internal/grafana/: exposure_test.go  grafana.go  grafana_test.go
internal/k8s/: client.go  service.go  types.go
internal/mcp/: describe.go  mcp.go  toolslist.go
internal/opensearch/: opensearch.go  opensearch_test.go
internal/server/: auth_routing_test.go  fakes_test.go  health_test.go  mcp_test.go  server.go
internal/version/: version.go
k8s/: deployment.yaml  kustomization.yaml  rbac.yaml  service.yaml  serviceaccount.yaml
src/: auth.rs  aws.rs  github.rs  grafana.rs  k8s.rs  lib.rs  main.rs  mcp.rs
tests/: auth.rs  health.rs  mcp.rs  server.rs
tests/integration/: _helpers.py  aws_config.py  dear_baby.py  github_app.py  grafana.py  grafana_cloud.py  opensearch.py  rbac.py  requirements.txt  smoke.py  workload.py
tests/k8s/kind/: dear-baby-fixture.yaml  github-app-patch.yaml  github-mock.yaml  grafana-mock.yaml  kustomization.yaml  minio.yaml  opensearch.yaml  test-deployment.yaml  test-workload.yaml
