[package]
name = "homelab-k3s-mcp"
version = "0.1.0"
edition = "2021"
description = "Homelab k3s MCP server"
license = "MIT OR Apache-2.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "homelab-k3s-mcp"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal", "sync", "io-util"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = { version = "9", default-features = false, features = ["use_pem"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
kube = { version = "3", default-features = false, features = ["client", "rustls-tls", "ring", "ws"] }
k8s-openapi = { version = "0.27", features = ["v1_33"] }
aws-config = { version = "1", default-features = false, features = ["rt-tokio", "behavior-version-latest"] }
aws-sdk-s3 = { version = "1", default-features = false, features = ["rt-tokio", "behavior-version-latest"] }
aws-smithy-http-client = { version = "1", default-features = false, features = ["default-client", "rustls-ring"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
